package com.tododia.Ingles.enums;

public enum Difficulty {
    EASY,
    MEDIUM,
    HARD
}
