package com.tododia.Ingles.enums;

public enum ExerciseDifficulty {
    EASY,
    MEDIUM,
    HARD
}
