package com.tododia.Ingles.enums;

public enum RoleName {
    ADMIN,
    USER
}
